# nfl-imperfect-info-rl

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: bins.yaml  defense_effects.yaml
src/data/: binning.py  ingest.py
src/env/: football_mdp.py
src/eval/: ep_curve_checks.py  opear.py
src/models/: calibrate.py  defense_effects.py  heads.py  special_teams.py
src/solve/: nash_lp.py  policy_iteration.py
src/utils/: checks.py  config.py  logging.py
tests/: conftest.py  test_binning.py  test_env.py  test_heads.py  test_solver.py
