[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nfl-imperfect-info-rl"
version = "0.1.0"
description = "Two-player imperfect-information NFL playcalling game (tiny RL sandbox)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{ name = "NFL Imperfect-Info RL authors" }]
dependencies = [
  "numpy",
  "pandas",
  "scikit-learn",
  "lightgbm",
  "pydantic>=2",
  "scipy",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "isort",
  "flake8",
  "mypy",
  "pre-commit",
]

[tool.setuptools]
package-dir = {"" = "src"}
packages = {find = {where = ["src"]}}

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100
multi_line_output = 3

[tool.flake8]
max-line-length = 100
extend-ignore = ["E203", "W503"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

